--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * ApiCommonWorkflow
 
-workflow step classes and graphs in XML for the Genomic sites
+workflow step classes and workflow graphs in XML for the genomic sites
 
 ** Dependencies
 
@@ -19,7 +19,7 @@ workflow step classes and graphs in XML for the Genomic sites
 
 ** Manifest
 
-   + Main/bin :: scripts to generate workflow files from dataset files for a provided component project
-   + Main/lib/perl :: workflow step classes in Perl. These are reusable modules that do work. Any type of task you want done is wrapped in a step class. For example, you might have a step class that runs BLAST. 
+   + Main/bin :: scripts to generate workflow files from dataset files for a provided component project.
+   + Main/lib/perl :: workflow step classes in Perl. These are reusable modules for any type of task.  
    + Main/lib/xml :: workflow graphs in XML. These graphs have steps that depend on each other and can also call subgraphs. Each step is a parameterized call to a step class.
 
